# pre-entrega-automation-testing-gerardo-toboso

./: .gitignore  README.md  behave.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
src/features/: catalog.feature  environment.py  login.feature  shopping_cart.feature
src/features/steps/: catalog_steps.py  login_steps.py  shopping_cart_steps.py
src/pages/: catalog_page.py  login_page.py
src/reports/: report.html
src/screenshots/: aclaracion.md
src/tests/: conftest.py  test_behave_runner.py  test_catalog.py  test_json_placeholder.py  test_login.py  test_post_lifecycle.py  test_shopping_cart.py
src/utils/: logger.py  screenshot_saver.py
